# payments-agent

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
payments_agent/: __init__.py  __main__.py  drafter.py  queue.py  stripe_provider.py  triage.py  types.py
tests/: conftest.py  test_drafter.py  test_provider_and_triage.py
